[gd_scene load_steps=7 format=3 uid="uid://bxw8b0d1dqun4"]

[ext_resource type="Script" uid="uid://cp4slo5sp4vo" path="res://cenas/jogo.gd" id="1_1frua"]
[ext_resource type="Texture2D" uid="uid://dm0mqmscnby6k" path="res://assets/GameBg.png" id="1_k46e6"]
[ext_resource type="PackedScene" uid="uid://canen35is57xa" path="res://cenas/coletor.tscn" id="2_32vai"]
[ext_resource type="PackedScene" uid="uid://r3u6qvwikdqa" path="res://cenas/gema.tscn" id="2_bkotw"]
[ext_resource type="AudioStream" uid="uid://b8dstxoq4qkt1" path="res://assets/bgm_action_5.mp3" id="5_dmxwg"]
[ext_resource type="AudioStream" uid="uid://cerapufg2tsoc" path="res://assets/spell1_0.wav" id="6_dtkcs"]

[node name="Jogo" type="Node2D"]
script = ExtResource("1_1frua")
cena_de_gema = ExtResource("2_bkotw")
cena_de_joojador = ExtResource("2_32vai")
gemas_limite = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(570, 338)
texture = ExtResource("1_k46e6")

[node name="Coletor" parent="." instance=ExtResource("2_32vai")]
position = Vector2(570, 629)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Placar" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 0, 0.866667)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 48
text = "00000"
metadata/_edit_use_anchors_ = true

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dmxwg")
volume_db = -5.0
autoplay = true

[node name="SFXGema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dtkcs")
volume_db = -5.0

[node name="REINICIAR" type="Button" parent="."]
visible = false
offset_left = 346.0
offset_top = 443.0
offset_right = 790.0
offset_bottom = 606.0
text = "Reiniciar"

[node name="Placarzinho" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.00729927
anchor_top = 0.761194
anchor_right = 0.70073
anchor_bottom = 1.41791
offset_left = -220.0
offset_top = 52.0
offset_right = 268.0
offset_bottom = 119.0
scale = Vector2(0.64, 0.64)
theme_override_colors/font_color = Color(1, 1, 0, 0.866667)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 48
text = "Recorde Atual: 00000"
metadata/_edit_use_anchors_ = true

[node name="Entrar" type="Label" parent="."]
offset_left = 902.0
offset_top = 5.0
offset_right = 1652.0
offset_bottom = 142.0
scale = Vector2(0.32, 0.32)
theme_override_colors/font_color = Color(1, 1, 0, 0.866667)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 48
text = "P1: Setas
P2: Pressione A ou D para entrar"
metadata/_edit_use_anchors_ = true

[node name="NomeJogador" type="TextEdit" parent="."]
visible = false
z_index = 100
offset_left = 375.0
offset_top = 50.0
offset_right = 766.0
offset_bottom = 113.0
placeholder_text = "Insira seu nome aqui"

[node name="BotaoJogador" type="Button" parent="."]
visible = false
offset_left = 371.0
offset_top = 156.0
offset_right = 379.0
offset_bottom = 164.0
scale = Vector2(2.56746, 2.01755)
text = "SALVAR RECORDE"

[connection signal="gema_capturada" from="Coletor" to="." method="_ao_coletor_gema_capturada"]
[connection signal="timeout" from="Timer" to="." method="_ao_tempo_expirar"]
[connection signal="pressed" from="REINICIAR" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="BotaoJogador" to="." method="_on_botao_jogador_pressed"]
